// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperatingSystemsChart when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="padding-0"
  >
    <div
      class="grid-row"
    >
      <div
        class="chart__title display-flex card:grid-col-12 mobile-lg:grid-col-fill card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0"
      >
        <a
          href="/definitions#dimension_operating_system"
        >
          <span
            class="usa-tooltip"
          >
            <span
              aria-describedby="tooltip-550000"
              class="usa-tooltip__trigger"
              data-position="top"
              tabindex="0"
            >
              Operating Systems
            </span>
            <span
              aria-hidden="true"
              class="usa-tooltip__body"
              id="tooltip-550000"
              role="tooltip"
            >
              The name of the operating system used by the user's device.
            </span>
          </span>
        </a>
        <a
          aria-label="os-yesterday.csv"
          href="http://www.example.com/data//os-yesterday.csv"
        >
          <svg
            aria-hidden="true"
            class="usa-icon margin-bottom-neg-05 margin-left-05"
            focusable="false"
            role="img"
          >
            <use
              xlink:href="/assets/uswds/img/sprite.svg#file_present"
            />
          </svg>
        </a>
      </div>
      <div
        class="card:grid-col-12 mobile-lg:grid-col-auto"
      >
        <div
          class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
        >
          <select
            aria-label="devices chart time filter"
            class="usa-select chart__filter margin-top-0"
          >
            <option
              value="yesterday"
            >
              Yesterday
            </option>
            <option
              value="7-days"
            >
              7 Days
            </option>
            <option
              value="30-days"
            >
              30 Days
            </option>
            <option
              value="90-days"
            >
              90 Days
            </option>
          </select>
        </div>
      </div>
    </div>
    <figure
      id="chart_os"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-2"
      >
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              iOS
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              36.6%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 37%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Windows
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              29.9%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 30%;"
            />
          </div>
          <figure
            class="chart__bar-chart__nested grid-col-12"
            data-scale-to-parent="true"
            id="chart_windows"
          >
            <div
              class="data chart__bar-chart text--capitalize"
            >
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="22.82190215063274"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    10
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    22.8%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 76%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="5.590931679869998"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    11
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    5.6%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 19%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="0.82591327878594"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    2000
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    0.8%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 3%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="0.31608292810730126"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    8
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    0.3%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 1%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="0.268696410359494"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    7
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    0.3%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 1%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="0.11880742089218736"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    8.1
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    0.1%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 0%;"
                  />
                </div>
              </div>
            </div>
          </figure>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Android
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              19.3%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 19%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Macintosh
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              10%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 10%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Linux
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              2.2%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 2%;"
            />
          </div>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              Chrome OS
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              1.9%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 2%;"
            />
          </div>
        </div>
      </div>
    </figure>
  </div>
</DocumentFragment>
`;

exports[`OperatingSystemsChart when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div
    class="padding-0"
  >
    <div
      class="grid-row"
    >
      <div
        class="chart__title display-flex card:grid-col-12 mobile-lg:grid-col-fill card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0"
      >
        <a
          href="/definitions#dimension_operating_system"
        >
          <span
            class="usa-tooltip"
          >
            <span
              aria-describedby="tooltip-550000"
              class="usa-tooltip__trigger"
              data-position="top"
              tabindex="0"
            >
              Operating Systems
            </span>
            <span
              aria-hidden="true"
              class="usa-tooltip__body"
              id="tooltip-550000"
              role="tooltip"
            >
              The name of the operating system used by the user's device.
            </span>
          </span>
        </a>
        <a
          aria-label="os-yesterday.csv"
          href="http://www.example.com/data//os-yesterday.csv"
        >
          <svg
            aria-hidden="true"
            class="usa-icon margin-bottom-neg-05 margin-left-05"
            focusable="false"
            role="img"
          >
            <use
              xlink:href="/assets/uswds/img/sprite.svg#file_present"
            />
          </svg>
        </a>
      </div>
      <div
        class="card:grid-col-12 mobile-lg:grid-col-auto"
      >
        <div
          class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
        >
          <select
            aria-label="devices chart time filter"
            class="usa-select chart__filter margin-top-0"
          >
            <option
              value="yesterday"
            >
              Yesterday
            </option>
            <option
              value="7-days"
            >
              7 Days
            </option>
            <option
              value="30-days"
            >
              30 Days
            </option>
            <option
              value="90-days"
            >
              90 Days
            </option>
          </select>
        </div>
      </div>
    </div>
    <figure
      id="chart_os"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-2"
      />
    </figure>
    <figure
      class="hide chart__bar-chart__nested grid-col-12"
      data-scale-to-parent="true"
      id="chart_windows"
    >
      <div
        class="data chart__bar-chart text--capitalize"
      />
    </figure>
  </div>
</DocumentFragment>
`;

exports[`OperatingSystemsChart when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div
    class="padding-0"
  >
    <div
      class="grid-row"
    >
      <div
        class="chart__title display-flex card:grid-col-12 mobile-lg:grid-col-fill card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0"
      >
        <a
          href="/definitions#dimension_operating_system"
        >
          <span
            class="usa-tooltip"
          >
            <span
              aria-describedby="tooltip-550000"
              class="usa-tooltip__trigger"
              data-position="top"
              tabindex="0"
            >
              Operating Systems
            </span>
            <span
              aria-hidden="true"
              class="usa-tooltip__body"
              id="tooltip-550000"
              role="tooltip"
            >
              The name of the operating system used by the user's device.
            </span>
          </span>
        </a>
        <a
          aria-label="os-yesterday.csv"
          href="http://www.example.com/data//os-yesterday.csv"
        >
          <svg
            aria-hidden="true"
            class="usa-icon margin-bottom-neg-05 margin-left-05"
            focusable="false"
            role="img"
          >
            <use
              xlink:href="/assets/uswds/img/sprite.svg#file_present"
            />
          </svg>
        </a>
      </div>
      <div
        class="card:grid-col-12 mobile-lg:grid-col-auto"
      >
        <div
          class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
        >
          <select
            aria-label="devices chart time filter"
            class="usa-select chart__filter margin-top-0"
          >
            <option
              value="yesterday"
            >
              Yesterday
            </option>
            <option
              value="7-days"
            >
              7 Days
            </option>
            <option
              value="30-days"
            >
              30 Days
            </option>
            <option
              value="90-days"
            >
              90 Days
            </option>
          </select>
        </div>
      </div>
    </div>
    <figure
      id="chart_os"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-2"
      />
    </figure>
    <figure
      class="hide chart__bar-chart__nested grid-col-12"
      data-scale-to-parent="true"
      id="chart_windows"
    >
      <div
        class="data chart__bar-chart text--capitalize"
      />
    </figure>
  </div>
</DocumentFragment>
`;
